[HOPS-1518] Reproduce bug in unit test
[HOPS-1518] Refactor X.509 authentication

[HOPS-1518] Authenticate client request based on x509 CN and username

[HOPS-1518] Decouple service JWT renewer from Actions class. Some tests keep failing

[HOPS-1518] Test ServiceJWTManager

[HOPS-1518] Only one ServiceJWTUpdater should run per host

[HOPS-1518] Fix bugs with exclusive renewal of tokens

[HOPS-1518] Move CertificateLocalizationService to hadoop-common

[HOPS-1518] Refactoring SecurityActions

[HOPS-1518] Common factory for HopsSecurityActions

[HOPS-1518] Test HopsworksFsSecurityActions

[HOPS-1518] Materialize user certificate when doing a WebHDFS call

[HOPS-1518] Delete x509 material if there is an exception and more testing

[HOPS-1518] Fix configuration properties

[HOPS-1518] Make AbstractSecurityActions a composite service with ServiceJWTManager as a sub-service

[HOPS-1518] Do not try to stop service if Hops TLS is not enabled

[HOPS-1518] Fix bug with default SecurityActions in tests

[HOPS-1518] Resolve peer review comments

[HOPS-1518] Fix SonarQube suggestions

[HOPS-1518] Fix Security Actions factory and tests